name:                haskell-src-exts-simple
version:             0.0.2
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Bertram Felgenhauer
maintainer:          int-e@gmx.de
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
    exposed-modules:
        Language.Haskell.Exts.Simple,
        Language.Haskell.Exts.Simple.Syntax,
        Language.Haskell.Exts.Simple.Fixity
    -- other-modules:       
    other-extensions:
        PatternSynonyms
    build-depends:
        base >= 4 && < 5,
        haskell-src-exts >= 1.18.2 && < 1.19
    hs-source-dirs:      src
    default-language:    Haskell2010
